--- a/resources/wp-content/themes/gigazone-gaming/sass/modules/_main-navigation.scss
+++ b/resources/wp-content/themes/gigazone-gaming/sass/modules/_main-navigation.scss
@@ -16,6 +16,7 @@
     width: 100%;
     background: $color-gz-gray;
     text-align: center;
+    overflow-x: hidden;
 
     &::after {
     }
@@ -141,7 +142,8 @@
         content: "";
         @include height(1.70);
         width: 1px;
-        left: 1px;
+        @include right(0);
+        @include margin-right(-.5);
         //top: 0.85em;
         @include top(0.75);
         position: absolute;
